--- a/home/bio.html
+++ b/home/bio.html
@@ -1,7 +1,3 @@
-I establish technical infrastructure and social patterns that enable collaboration and participation, facilitate and inspire teams, and create and promote the use of civic media and disruptive technologies — from 3D printers to etherpads to apps for direct action. I am the co-founder of Sukey, a platform to keep demonstrators safe, mobile, and informed. I founded OccupyLSX tech, and am a key contributor to Cryptoparty, founding CryptopartyLondon with some friends, and been known to go all-in on initiatives like Hurricane Hackers. I have also worked in industry with companies and for clients. Participating in whichever local Hackspace there is as I travel the world, I repair and hack everything I own, and help the others I meet to become empowered by and involved with hacker culture. I hold a BEng with honors from Durham University, and I am a member of the Institution of Engineering and Technology (IET).
-
-
-
 <!--                                                                              
                      _   _          _            _     _                           
                     | | | |        | |          | |   (_)                          
@@ -20,7 +16,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
   <title>Samuel Carlisle BEng (hons) Dunelm MIET</title>
   <meta name="description" content="A portfolio of the projects I have worked on and their impact, the services I provide, the skills that I have and some of my writings.">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  1311
+ 
   <link rel="stylesheet" href="../css/layout.css">
   <link rel="stylesheet" href="../css/typography.css">
   <link rel="stylesheet" href="../css/utilities.css">
@@ -116,17 +112,17 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       <a href="../service/business_development.html">> Business Development</a>
     </div>
   </div>
-  <!-- Use any element to open/show the overlay navigation menu -->
-  <span onclick="openNav()">open</span>
+
   <!-- MAIN PAGE CONTENT -->
   <div id="main-content">
 
     <!-- PROJECT HEADER -->
     <div id="project-header">
 
-      <div class="main-title">Nanode</div>
-      <div class="body-text">Nanode is an open source Arduino-like board that has in-built web connectivity. It is a low cost platform for creative development of web connected ideas. Languages: C</div>
-      <image class="project-header-image" src="../assets/images/nanode.png">
+      <div class="main-title">Bio</div>
+      <div class="body-text">I establish technical infrastructure and social patterns that enable collaboration and participation, facilitate and inspire teams, and create and promote the use of civic media and disruptive technologies — from 3D printers to etherpads to apps for direct action. I am the co-founder of Sukey, a platform to keep demonstrators safe, mobile, and informed. I founded OccupyLSX tech, and am a key contributor to Cryptoparty, founding CryptopartyLondon with some friends, and been known to go all-in on initiatives like Hurricane Hackers. I have also worked in industry with companies and for clients. Participating in whichever local Hackspace there is as I travel the world, I repair and hack everything I own, and help the others I meet to become empowered by and involved with hacker culture. I hold a BEng with honors from Durham University, and I am a member of the Institution of Engineering and Technology (IET).
+</div>
+      <img loading="lazy" class="project-header-image" src="../assets/images/nanode.png">
       </div>
 
 
@@ -163,7 +159,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     <div id="footer">
 
       <a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
-        <image src="../assets/icons/mail.svg" class="footer-icon"/>
+        <img loading="lazy" src="../assets/icons/mail.svg" class="footer-icon"/>
       </a>
     </div>
 
