--- a/home/bio.html
+++ b/home/bio.html
@@ -15,9 +15,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     <title>Samuel Carlisle BEng (hons) Dunelm MIET</title>
     <meta name="description" content="A portfolio of the projects I have worked on and their impact, the services I provide, the skills that I have and some of my writings.">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="../css/layout.css">
-    <link rel="stylesheet" href="../css/typography.css">
-    <link rel="stylesheet" href="../css/utilities.css">
+    <link rel="stylesheet" href="../css/merged.css">
     <script defer src="../js/script.js"></script>
   </head>
   <body>
@@ -137,9 +135,15 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
     </div>
     <!-- FOOTER -->
     <div id="footer">
-      <a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
-        <img loading="lazy" src="../assets/icons/mail.svg" class="footer-icon" />
-      </a>
+<span class="copyleft">©</span>Samuel Carlisle
+
+<a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
+<img loading="lazy" src="../assets/icons/mail.svg" class="footer-icon" />
+</a>           
+
+<a rel="me" href="https://kolektiva.social/@"><img loading="lazy" src="../assets/icons/mastodon.png" class="footer-icon"></a>
+
+<a rel="me" href="https://delta.chat/en/"><img loading="lazy" src="../assets/icons/deltachat.png" class="footer-icon"></a>
     </div>
   </body>
 </html>
